8-security/11-end-user-authz-by-path.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: end-user-jwt-authz-policy
  namespace: istio-system
spec:
  selector:
    matchLabels:
      istio: ingressgateway
  action: ALLOW
  rules:
  - from:
    - source:
        requestPrincipals: ["issuer@zhaohuabing.com/jason"]
    to:
    - operation:
        methods: ["GET"]
        paths: ["/productpage"]
