8-security/20-deny-all.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: default-deny-all-auth-policy
  namespace: default
spec:
  action: DENY
  rules:
  - {}
